syntax = "proto3";
 
package colors_serialize;

message Rgb {
  uint32 red = 1;
  uint32 green = 2;
  uint32 blue = 3;
}

message Rgba {
  uint32 red = 1;
  uint32 green = 2;
  uint32 blue = 3;
  double opacity = 4;
}

message Color {
  oneof color {
    Rgb rgb = 1;
    Rgba rgba = 2;
    string custom_color = 3;
    bool has_monostate = 4;
  }
}